# final_project_all_in_one

./: .gitignore  createjupyterkernel.bash  createjupyterkernel.bat
recruiter-crewai/: README.md  crewai_langfuse_run.ipynb  crewai_mlflow_run.ipynb  pyproject.toml  report.md
recruiter-crewai/mlartifacts/766133932460693192/traces/4e7b8c9fc8b34bdf94b123778ee5faee/artifacts/: traces.json
recruiter-crewai/mlartifacts/766133932460693192/traces/df9c95d6ba3c42f9af472f6d0f8e4732/artifacts/: traces.json
recruiter-crewai/mlartifacts/766133932460693192/traces/fe107e3f03004252ae919f790c6c67ae/artifacts/: traces.json
recruiter-crewai/mlruns/0/: meta.yaml
recruiter-crewai/mlruns/766133932460693192/: meta.yaml
recruiter-crewai/mlruns/766133932460693192/tags/: mlflow.sharedViewState.3894e7dac091113a949e1a0b144bdfbf23f857b1cfb2b6251e919052fe25b155
recruiter-crewai/mlruns/766133932460693192/traces/03667476a0e44b8993427213b8d90dcc/: trace_info.yaml
recruiter-crewai/mlruns/766133932460693192/traces/31ae81636cce43dc9a266e159f704bf8/: trace_info.yaml
recruiter-crewai/mlruns/766133932460693192/traces/4e7b8c9fc8b34bdf94b123778ee5faee/: trace_info.yaml
recruiter-crewai/mlruns/766133932460693192/traces/7250e88c2f3746c79bf62fa4e1ea7e62/: trace_info.yaml
recruiter-crewai/mlruns/766133932460693192/traces/df9c95d6ba3c42f9af472f6d0f8e4732/: trace_info.yaml
recruiter-crewai/mlruns/766133932460693192/traces/fe107e3f03004252ae919f790c6c67ae/: trace_info.yaml
recruiter-crewai/src/recruiter/: crew.py  main.py
recruiter-crewai/src/recruiter/config/: agents.yaml  tasks.yaml
(+132 files in other folders)
