[project]
name = "recruiter"
version = "0.1.0"
description = "recruiter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
recruiter = "recruiter.main:run"
run_crew = "recruiter.main:run"
train = "recruiter.main:train"
replay = "recruiter.main:replay"
test = "recruiter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
